# analysis

./: .env.example  .env.local  .gitignore  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  requirements.txt  start.sh  tsconfig.tsbuildinfo  vercel.json
api/: index.py
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_dataset_metadata_columns.py
backend/app/: config.py  main.py
backend/app/agents/: graph.py  nodes.py  tools.py
backend/app/api/: deps.py
backend/app/copilot/: brain.py  memory.py  planner.py  proactor.py  tools.py
backend/app/core/: sandbox.py  storage.py  tasks.py
backend/app/db/: models.py  session.py
backend/app/llm/: base.py  factory.py  prompts.py  providers.py
backend/app/models/: schemas.py
backend/app/repositories/: __init__.py  dashboard_repository.py  dataset_repository.py  project_repository.py  user_repository.py
backend/app/services/: alerting.py  cleaning.py  confidence.py  eda.py  goal_detector.py  ingestion.py  lineage.py  marketplace.py  ml.py  playground.py  qa.py  reports.py  simulation.py  storage_service.py  summary.py  utils.py
backend/app/tools/: advanced.py  alerting_tool.py  analysis.py  confidence_tool.py  goal_tool.py  lineage_tool.py  marketplace_tool.py  multisheet_tool.py  playground_tool.py  preprocessing.py  simulation_tool.py
backend/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
backend/catboost_info/learn/: events.out.tfevents
backend/scripts/: migrate_sqlite_to_pg.py
(+59 files in other folders)
