[project]
name = "ai-data-analyst-backend"
version = "0.1.0"
description = "Backend for AI Data Analyst Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "numpy>=2.0.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.10",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.50.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "ydata-profiling>=4.8.0",
    "plotly>=5.24.0",
    "matplotlib>=3.9.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "catboost>=1.2.0",
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "anyio>=4.6.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.railpack]
start = "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
